--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Hello, World</title>
+    <title>Watches app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
