--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -22,38 +22,36 @@
 
         <!--Header-->
         <div data-role="header" data-position="fixed">
-            <h1>Home!</h1>
+            <h1>Watches app</h1>
         </div>
 
         <!--Content-->
         <div data-role="content">
-            <h1>Welcome to Telerik AppBuilder!</h1>
+            <h1>Bienvenido a watches app</h1>
             <p>
-                Telerik AppBuilder&trade; enables you to build cross-platform device applications regardless of your
-                    development platform by combining the convenience of a local development toolset with the
-                    power and flexibility of the cloud.
+                Comparador de las grandes marcas de relojes.
             </p>
         </div>
         <div class="nav">
             <ul data-role="listview">
                 <li>
-                    <a href="#page-ui-interaction" data-transition="slide">UI Interaction Example</a>
+                    <a href="#page-lotus" data-transition="slide">Lotus</a>
                 </li>
                 <li>
-                    <a href="#page-location" data-transition="slide">Location Example</a>
+                    <a href="#page-rollex" data-transition="slide">Rollex</a>
                 </li>
             </ul>
         </div>
 
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Built with Telerik AppBuilder&trade;</span>
+            <span class="footerText">Copyright @2014</span>
         </div>
 
     </div>
 
     <!--UI interaction-->
-    <div id="page-ui-interaction" data-role="page" data-add-back-btn="true">
+    <div id="page-lotus" data-role="page" data-add-back-btn="true">
 
         <!--Header-->
         <div data-role="header" data-position="fixed">
@@ -62,26 +60,7 @@
 
         <!--Content-->
         <div data-role="content">
-            <div id="login-wrap">
-                <form data-ajax="false" id="login-form">
-                    <h3 id="login-text">Enter your credentials:</h3>
-                    <div>
-                        <input id="login-username" type="text" placeholder="Username" />
-                        <input id="login-password" type="password" placeholder="Password" />
-                    </div>
 
-                    <div class="buttons ui-bar">
-                        <div>
-                            <div class="left">
-                                <input type="submit" id="login" data-icon="check" data-inline="true" class="left" value="Login" />
-                            </div>
-                            <div class="right">
-                                <button id="login-reset" data-icon="delete" data-inline="true" class="right">Reset</button>
-                            </div>
-                            <div class="clear"></div>
-                        </div>
-                    </div>
-                </form>
             </div>
 
             <div id="logout-wrap">
@@ -100,13 +79,13 @@
 
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Built with Telerik AppBuilder&trade;</span>
+            <span class="footerText">Copyright @2014</span>
         </div>
 
     </div>
 
     <!--Location-->
-    <div id="page-location" data-role="page" data-add-back-btn="true">
+    <div id="page-rollex" data-role="page" data-add-back-btn="true">
 
         <!--Header-->
         <div id="page-location-header" data-role="header" data-position="fixed">
@@ -127,7 +106,7 @@
 
         <!--Footer-->
         <div id="page-location-footer" data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Built with Telerik AppBuilder&trade;</span>
+            <span class="footerText">Copyright @2014</span>
         </div>
 
     </div>
