--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -40,6 +40,9 @@
                 <li>
                     <a href="#page-rollex" data-transition="slide">Rollex</a>
                 </li>
+                <li>
+                    <a href="#page-casio" data-transition="slide">Casio</a>
+                </li>
             </ul>
         </div>
 
@@ -50,31 +53,35 @@
 
     </div>
 
-    <!--UI interaction-->
+    <!--Lotus-->
     <div id="page-lotus" data-role="page" data-add-back-btn="true">
 
         <!--Header-->
         <div data-role="header" data-position="fixed">
-            <h1>Login</h1>
+            <h1>Lotus</h1>
         </div>
 
         <!--Content-->
         <div data-role="content">
+        </div>
 
-            </div>
+        <!--Footer-->
+        <div data-role="footer" data-position="fixed" data-id="oneFooter">
+            <span class="footerText">Copyright @2014</span>
+        </div>
 
-            <div id="logout-wrap">
-                <div>
-                    <h1 class="welcome">Welcome, <span id="logout-username"></span>!
-                    </h1>
-                </div>
+    </div>
+    
+        <!--Casio-->
+    <div id="page-casio" data-role="page" data-add-back-btn="true">
 
-                <div class="buttons">
-                    <div data-role="controlgroup" data-type="horizontal">
-                        <button id="logout" data-icon="back">Logout</button>
-                    </div>
-                </div>
-            </div>
+        <!--Header-->
+        <div data-role="header" data-position="fixed">
+            <h1>Casio</h1>
+        </div>
+
+        <!--Content-->
+        <div data-role="content">
         </div>
 
         <!--Footer-->
@@ -84,26 +91,15 @@
 
     </div>
 
-    <!--Location-->
+    <!--Rollex-->
     <div id="page-rollex" data-role="page" data-add-back-btn="true">
 
         <!--Header-->
-        <div id="page-location-header" data-role="header" data-position="fixed">
-            <h1>Location</h1>
+        <div data-role="header" data-position="fixed">
+            <h1>Rollex</h1>
         </div>
-
         <!--Content-->
-        <div id="page-location-content" data-role="content">
-            <div id="map-search-wrap">
-                <a id="map-navigate-home"></a>
-                <form data-ajax="false" onsubmit="return false;">
-                    <input id="map-address" type="search" data-role="none" placeholder="Address" />
-                    <input id="map-search" type="submit" value="" data-role="none" />
-                </form>
-            </div>
-            <div id="map-canvas"></div>
-        </div>
-
+        
         <!--Footer-->
         <div id="page-location-footer" data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
