--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Watches app</title>
+    <title>Watchesapp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
@@ -33,15 +33,15 @@
             </p>
         </div>
         <div class="nav">
-            <ul data-role="listview">
+            <ul data-role="listview" data-theme="a">
                 <li>
-                    <a href="#page-lotus" data-transition="slide">Lotus</a>
+                    <a href="lotus.html" data-transition="slidedown">Lotus</a>
                 </li>
                 <li>
-                    <a href="#page-rollex" data-transition="slide">Rollex</a>
+                    <a href="rollex.html" data-transition="slideup">Rollex</a>
                 </li>
                 <li>
-                    <a href="#page-casio" data-transition="slide">Casio</a>
+                    <a href="casio.html" data-transition="pop">Casio</a>
                 </li>
             </ul>
         </div>
@@ -50,63 +50,9 @@
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
         </div>
-
     </div>
 
-    <!--Lotus-->
-    <div id="page-lotus" data-role="page" data-add-back-btn="true">
-
-        <!--Header-->
-        <div data-role="header" data-position="fixed">
-            <h1>Lotus</h1>
-        </div>
-
-        <!--Content-->
-        <div data-role="content">
-        </div>
-
-        <!--Footer-->
-        <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-        </div>
-
-    </div>
-    
-        <!--Casio-->
-    <div id="page-casio" data-role="page" data-add-back-btn="true">
-
-        <!--Header-->
-        <div data-role="header" data-position="fixed">
-            <h1>Casio</h1>
-        </div>
-
-        <!--Content-->
-        <div data-role="content">
-        </div>
-
-        <!--Footer-->
-        <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-        </div>
-
-    </div>
-
-    <!--Rollex-->
-    <div id="page-rollex" data-role="page" data-add-back-btn="true">
-
-        <!--Header-->
-        <div data-role="header" data-position="fixed">
-            <h1>Rollex</h1>
-        </div>
-        <!--Content-->
-        
-        <!--Footer-->
-        <div id="page-location-footer" data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-        </div>
-
-    </div>
-    <script type="text/javascript">
+ <script type="text/javascript">
         document.addEventListener('deviceready', function () {
             navigator.splashscreen.hide();
         }, false);
