--- a/Watches app/rollex.html
+++ b/Watches app/rollex.html
@@ -13,7 +13,13 @@
             <h1>Rollex</h1>
         </div>
         <!--Content-->
-        
+        <div data-role="content">
+           </div>
+               <div class="ui-grid-b">
+                   <a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Inicio</a>
+                   <a href="#relojes" class="ui-btn ui-icon-clock ui-btn-icon-left">Relojes</a>
+                   <a href="#location" class="ui-btn ui-icon-location ui-btn-icon-left">Tienda oficial</a>
+              </div>
         <!--Footer-->
         <div id="page-location-footer" data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
