--- a/Watches app/rollex.html
+++ b/Watches app/rollex.html
@@ -14,17 +14,19 @@
         </div>
         <!--Content-->
         <div data-role="content">
-           </div>
-               <div class="ui-grid-b">
-                   <a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Inicio</a>
-                   <a href="#relojes" class="ui-btn ui-icon-clock ui-btn-icon-left">Relojes</a>
-                   <a href="#location" class="ui-btn ui-icon-location ui-btn-icon-left">Tienda oficial</a>
-              </div>
+        <div data-role="navbar"  data-iconpos="left" data-role="collapsible-set" data-theme="c" data-content-theme="d">
+        <ul>
+         <li><a href="#">Relojes</a></li>
+         <li><a href="#">Official website</a></li>
+         <li><a href="#">Localizacion</a></li>
+        </ul>
+       </div>
+      </div>
         <!--Footer-->
         <div id="page-location-footer" data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
         </div>
+       </div>
 
-    </div>
     </body>
 </html>
