--- a/Watches app/rollex.html
+++ b/Watches app/rollex.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="david.css"/>
-        <title>watchesapp/rollex</title>
+        <title>watchesapp/rolex</title>
     </head>
     <body>
         <!--Rollex-->
@@ -15,30 +15,65 @@
         </div>
         <!--Content-->
         <div data-role="content">
-         <h1>Rollex</h1>
+         <h1>Rolex</h1>
 
         <div>
         <ul data-role="listview" data-theme="c">
-         <li><a href="#">Relojes</a></li>
+         <li><a href="relojesroll.html">Relojes</a></li>
          <li><a href="http://m.rolex.com/es">Official website</a></li>
-         <li><a href="#">Localizacion</a></li>
+         <li><a href="#localizacion">Localizacion</a></li>
         </ul>
        </div>
-        <a href="#popupPanel" data-rel="popup" data-transition="slide" data-position-to="window" data-role="button">Open panel</a>
- 
-<div data-role="popup" id="popupPanel" data-corners="false" data-theme="none" data-shadow="false" data-tolerance="0,0">
- 
-    <button data-theme="a" data-icon="back" data-mini="true">Back</button>
-    <button data-theme="a" data-icon="grid" data-mini="true">Menu</button>
-    <button data-theme="a" data-icon="search" data-mini="true">Search</button>
- 
-</div>    
+   
       </div>
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
         </div>
        </div>
+        <!--Localizacion-->
+        <div id="localizacion" data-role="page" data-add-back-btn="true">
+        </div>
+        <!--Header-->
+        <div data-role="header" data-position="fixed">
+            <h1>Watches app</h1>
+        </div>
+          <!--Content-->
+        <div data-role="content">
+         <h1>Distribuidores de Rolex</h1>
 
+        <div>
+        <ul data-role="listview" data-theme="c">
+         <li><a href="#Valencia">Valencia</a></li>
+         <li><a href="#Madrid">Madrid</a></li>
+         <li><a href="#Barcelona">Barcelona</a></li>
+        </ul>
+       </div>
+             </div>
+        <!--Footer-->
+        <div data-role="footer" data-position="fixed" data-id="oneFooter">
+            <span class="footerText">Copyright @2014</span>
+        </div>
+        <!--Relojes-->
+        <div id="page-valencia" data-role="page" data-add-back-btn="true">
+        </div>
+        <!--Header-->
+        <div data-role="header" data-position="fixed">
+            <h1>Watches app</h1>
+        </div>
+        <!--Content-->
+       <div data-role="page" id="map-page" data-url="map-page">
+         <div data-role="header" data-theme="a">
+         <h1>Maps</h1>
+         </div>
+         <div role="main" class="ui-content" id="map-canvas">
+        <!-- map loads here... -->
+    </div>
+</div>
+        <!--Footer-->
+        <div data-role="footer" data-position="fixed" data-id="oneFooter">
+            <span class="footerText">Copyright @2014</span>
+        </div>
     </body>
+    
 </html>
