--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -5,7 +5,7 @@
     <title>Watchesapp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
-    <link href="styles/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="david.css"/>
 
     <script src="cordova.js" type="text/javascript"></script>
     <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
@@ -27,10 +27,7 @@
 
         <!--Content-->
         <div data-role="content">
-            <h1>Bienvenido a watches app</h1>
-            <p>
-                Comparador de las grandes marcas de relojes.
-            </p>
+            <h1 >Bienvenido a watches app</h1>
         </div>
         <div class="nav">
             <ul data-role="listview" data-theme="a">
@@ -38,7 +35,7 @@
                     <a href="lotus.html" data-transition="slidedown">Lotus</a>
                 </li>
                 <li>
-                    <a href="rollex.html" data-transition="slideup">Rollex</a>
+                    <a href="rollex.html" data-transition="slideup">Rolex</a>
                 </li>
                 <li>
                     <a href="casio.html" data-transition="pop">Casio</a>
