--- a/Watches app/relojesroll.html
+++ b/Watches app/relojesroll.html
@@ -2,12 +2,24 @@
 
 <html>
     <head>
+    <meta charset="UTF-8" />
         <title>watchesapp/rolex/relojes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="david.css"/>
+
+    <script src="cordova.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+
+    <script src="scripts/login.js" type="text/javascript"></script>
+    <script src="scripts/location.js" type="text/javascript"></script>
     </head>
     <body>
         <!--Relojes-->
         <div id="page-relojesroll" data-role="page" data-add-back-btn="true">
-        </div>
+        
         <!--Header-->
         <div data-role="header" data-position="fixed">
             <h1>Watches app</h1>
@@ -18,11 +30,12 @@
 
         <div>
         <ul data-role="listview" data-theme="c">
-         <li><a href="#">Coleccion Oyster</a></li>
-         <li><a href="#">Coleccion Cellini</a></li>
+         <li><a href="#Oyster">Coleccion Oyster</a></li>
+         <li><a href="#Cellini">Coleccion Cellini</a></li>
         </ul>
        </div>
    
       </div>
+     </div>
     </body>
 </html>
