--- a/Watches app/rollex.html
+++ b/Watches app/rollex.html
@@ -2,8 +2,19 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="david.css"/>
+      <meta charset="UTF-8" />
         <title>watchesapp/rolex</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="david.css"/>
+
+    <script src="cordova.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+
+    <script src="scripts/login.js" type="text/javascript"></script>
+    <script src="scripts/location.js" type="text/javascript"></script>
     </head>
     <body>
         <!--Rollex-->
@@ -21,7 +32,7 @@
         <ul data-role="listview" data-theme="c">
          <li><a href="relojesroll.html">Relojes</a></li>
          <li><a href="http://m.rolex.com/es">Official website</a></li>
-         <li><a href="#localizacion">Localizacion</a></li>
+         <li><a href="localizacionroll.html">Localizacion</a></li>
         </ul>
        </div>
    
@@ -30,50 +41,6 @@
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">Copyright @2014</span>
         </div>
-       </div>
-        <!--Localizacion-->
-        <div id="localizacion" data-role="page" data-add-back-btn="true">
-        </div>
-        <!--Header-->
-        <div data-role="header" data-position="fixed">
-            <h1>Watches app</h1>
-        </div>
-          <!--Content-->
-        <div data-role="content">
-         <h1>Distribuidores de Rolex</h1>
-
-        <div>
-        <ul data-role="listview" data-theme="c">
-         <li><a href="#Valencia">Valencia</a></li>
-         <li><a href="#Madrid">Madrid</a></li>
-         <li><a href="#Barcelona">Barcelona</a></li>
-        </ul>
-       </div>
-             </div>
-        <!--Footer-->
-        <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-        </div>
-        <!--Relojes-->
-        <div id="page-valencia" data-role="page" data-add-back-btn="true">
-        </div>
-        <!--Header-->
-        <div data-role="header" data-position="fixed">
-            <h1>Watches app</h1>
-        </div>
-        <!--Content-->
-       <div data-role="page" id="map-page" data-url="map-page">
-         <div data-role="header" data-theme="a">
-         <h1>Maps</h1>
-         </div>
-         <div role="main" class="ui-content" id="map-canvas">
-        <!-- map loads here... -->
-    </div>
-</div>
-        <!--Footer-->
-        <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-        </div>
+     </div>
     </body>
-    
 </html>
