--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -15,6 +15,7 @@
     <script src="scripts/login.js" type="text/javascript"></script>
     <script src="scripts/location.js" type="text/javascript"></script>
 </head>
+
 <body>
 
     <!--Home-->
@@ -30,7 +31,7 @@
             <h1 >Bienvenido a watches app</h1>
         </div>
         <div class="nav">
-            <ul data-role="listview" data-theme="a">
+            <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
                 <li>
                     <a href="lotus.html" data-transition="slidedown">Lotus</a>
                 </li>
