--- a/Watches app/relojesroll.html
+++ b/Watches app/relojesroll.html
@@ -30,7 +30,7 @@
 
         <div>
         <ul data-role="listview" data-theme="c">
-         <li><a href="#Oyster">Coleccion Oyster</a></li>
+            <li><a href="oyster.html">Coleccion Oyster</a></li>
          <li><a href="#Cellini">Coleccion Cellini</a></li>
         </ul>
        </div>
