--- a/Watches app/oyster.html
+++ b/Watches app/oyster.html
@@ -39,22 +39,26 @@
     </head>
     
     <body>
-        <div id="oysterpage" data-role="page">
-        <div data-role="header" data-position="fixed">
-            <h1>Watches app</h1>
-        </div>
+        <!--Rollex-->
+    <div id="oysterpage" data-role="page" data-add-back-btn="true">
 
+        <!--Header-->
+        <div data-role="header" data-position="fixed">
+            <h1>Oyster</h1>
+        </div>
         <!--Content-->
         <div data-role="content">
-            <h1 >Bienvenido a watches app</h1>
-        </div>
-        <div class="nav">
-            <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
-                <li id="datejust"><a href"">Datejust</a></li>
-                <li id="date"><a href="">Day-Date</a></li>
-                <li id="date2"><a href="#">Day-Date II</a></li>
-            </ul>
-        </div>
+         <h1>Rolex</h1>
+
+        <div>
+        <ul data-role="listview" data-theme="c" data-inset="true">
+         <li><a href="#datejust">Datejust</a></li>
+         <li><a href="#date">Day-date</a></li>
+         <li><a href="#date2">Day-date II</a></li>
+        </ul>
+       </div>
+   
+      </div>
 
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
@@ -63,7 +67,7 @@
      </div>
         
       <!--Datejust-->
-        <div id="datejust" data-role="page">
+       <div id="datejust" data-role="page" data-add-back-btn="true">
         <div data-role="header" data-position="fixed">
             <h1>Datejust</h1>
         </div>
