--- a/Watches app/datejust.html
+++ b/Watches app/datejust.html
@@ -6,7 +6,7 @@
         <title>datejust</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="david.css"/>
+    <link rel="stylesheet" href="swipe-page.css"/>
 
     <script src="cordova.js" type="text/javascript"></script>
     <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
@@ -18,21 +18,31 @@
     </head>
     <body>
          <!--Datejust-->
-       <div  data-role="page" data-add-back-btn="true">
-        <div data-role="header" data-position="fixed">
-            <h1>Datejust</h1>
+       <div data-role="page" id="datejust" class="demo-page" data-dom-cache="true" data-theme="a" data-next="date">
+
+    <div data-role="header" data-position="fixed" data-fullscreen="true" data-id="hdr" data-tap-toggle="false">
+        <h1>Datejust</h1>
+        <a href="oyster.html" data-ajax="false" data-direction="reverse" data-icon="delete" data-iconpos="notext" data-shadow="false" data-icon-shadow="false">Back</a>
+    </div><!-- /header -->
+  
+	<div data-role="content">
+    
+		<div id="trivia-newyork" class="trivia ui-content" data-role="popup" data-position-to="window" data-tolerance="50,30,30,30" data-theme="d">
+        	<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+			<p>Although many legends exist about the origin of New York City's nickname, the Big Apple, most historians agree that it can be traced back to a writer who covered horse racing in the 1920s. In The Morning Telegraph, he wrote that stable hands often referred to New York as the Big Apple, meaning that any thoroughbred that raced in New York had reached the pinnacle of racing. <small>source:&nbsp;nylady.hubpages.com</small></p>
         </div>
 
-        <!--Content-->
-        <div data-role="content">
-            <div class="centrado">
-                <img src="swypeoyster/imagenesoyster/datejust.jpg">
-            </div>
-       </div>   
-    <!--Footer-->
-        <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
-      </div>
-     </div>
+	</div><!-- /content -->
+
+    <div data-role="footer" data-position="fixed" data-fullscreen="true" data-id="ftr" data-tap-toggle="false">
+		<div data-role="controlgroup" class="control ui-btn-left" data-type="horizontal" data-mini="true">
+        	<a href="#" class="prev" data-role="button" data-icon="arrow-l" data-iconpos="notext" data-theme="d">Previous</a>
+        	<a href="#" class="next" data-role="button" data-icon="arrow-r" data-iconpos="notext" data-theme="d">Next</a>
+        </div>
+        
+		<a href="#trivia-newyork" data-rel="popup" class="trivia-btn ui-btn-right" data-role="button" data-icon="info" data-iconpos="left" data-theme="d" data-mini="true">Trivia</a>
+    </div><!-- /footer -->
+
+</div><!-- /page -->
     </body>
 </html>
