commit pa el ruben

--- a/Watches app/datejust.html
+++ b/Watches app/datejust.html
@@ -63,12 +63,12 @@
     </script>
 	<style>
 		/* Set the background image sources */
-        datejust { background-image: url(swypeoyster/imagenesoyster/datejust.jpg); }
-		#date { background-image: url(swypeoyster/imagenesoyster/date.jpg); }
-		#date2 { background-image: url(swypeoyster/imagenesoyster/date2.jpg); }
-		#cosmo { background-image: url(swypeoyster/imagenesoyster/cosmo.jpg); }
-		#explorer { background-image: url(swypeoyster/imagenesoyster/explorer.jpg); }
-		#submariner { background-image: url(swypeoyster/imagenesoyster/submariner.jpg); }
+        datejust { background-image: url(swipeoyster/imagenesoyster/datejust.jpg); }
+		#date { background-image: url(swipeoyster/imagenesoyster/date.jpg); }
+		#date2 { background-image: url(swipeoyster/imagenesoyster/date2.jpg); }
+		#cosmo { background-image: url(swipeoyster/imagenesoyster/cosmo.jpg); }
+		#explorer { background-image: url(swipeoyster/imagenesoyster/explorer.jpg); }
+		#submariner { background-image: url(swipeoyster/imagenesoyster/submariner.jpg); }
 		/* Background settings */
 		.demo-page {
 			background-size: cover;
@@ -104,7 +104,7 @@
     </head>
     <body>
          <!--Datejust-->
-       <div data-role="page" id="#datejust" class="demo-page" data-dom-cache="true" data-theme="a" data-next="date.html">
+       <div data-role="page" id="datejust" class="demo-page" data-dom-cache="true" data-theme="a" data-next="date">
 
     <div data-role="header" data-position="fixed" data-fullscreen="true" data-id="hdr" data-tap-toggle="false">
         <h1>Datejust</h1>
