--- a/Watches app/datejust.html
+++ b/Watches app/datejust.html
@@ -9,14 +9,18 @@
     <link rel="stylesheet" href="david.css"/>
 
     <script src="cordova.js" type="text/javascript"></script>
+       	<script>
+            // Bind to "mobileinit" before you load jquery.mobile.js
+		// Set the default transition to slide
+		$(document).on( "mobileinit", function() {
+			$.mobile.defaultPageTransition = "slide";
+		});
+       </script>
     <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="jquery-mobile/js/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+
       
-    <script src="swype.js" type="text/javascript"></script>
-    <script src="scripts/login.js" type="text/javascript"></script>
-    <script src="scripts/location.js" type="text/javascript"></script>
-       
+    <script src="swype.js" type="text/javascript"></script>       
     </head>
     <body>
          <!--Datejust-->
