--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -43,7 +43,7 @@
 
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
-            <span class="footerText">Copyright @2014</span>
+            <span class="footerText">CopyrightJouwork @2014</span>
         </div>
     </div>
 
