--- a/Watches app/datejust.html
+++ b/Watches app/datejust.html
@@ -6,8 +6,7 @@
         <title>datejust</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="david.css"/>
-    <script src="swype.js" type="text/javascript"></script> 
+    <link rel="stylesheet" href="david.css"/> 
     <script src="cordova.js" type="text/javascript"></script>
        	<script>
             // Bind to "mobileinit" before you load jquery.mobile.js
@@ -18,6 +17,7 @@
        </script>
     <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="jquery-mobile/js/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>    
+    <script src="swype.js" type="text/javascript"></script>
     </head>
     <body>
          <!--Datejust-->
@@ -43,7 +43,7 @@
         	<a href="#" class="prev" data-role="button" data-icon="arrow-l" data-iconpos="notext" data-theme="d">Previous</a>
         	<a href="#" class="next" data-role="button" data-icon="arrow-r" data-iconpos="notext" data-theme="d">Next</a>
         </div>
-        <h1>prueba</h1>
+        <h1>CopyrightJouwork @2014</h1>
        
         
 		<a href="#trivia-datejust" data-rel="popup" class="trivia-btn ui-btn-right" data-role="button" data-icon="info" data-iconpos="left" data-theme="d" data-mini="true">Trivia</a>
