--- a/Watches app/localizacionroll.html
+++ b/Watches app/localizacionroll.html
@@ -61,7 +61,7 @@
    </div>
         <!--Footer-->
     <div data-role="footer" data-position="fixed" data-id="oneFooter">
-       <span class="footerText">Copyright @2014</span>
+       <span class="footerText">CopyrightJouwork @2014</span>
     </div>
          <script type="text/javascript">
         document.addEventListener('deviceready', function () {
