--- a/Watches app/relojesroll.html
+++ b/Watches app/relojesroll.html
@@ -30,12 +30,17 @@
 
         <div>
         <ul data-role="listview" data-theme="c">
-            <li><a href="datejust.html">Coleccion Oyster</a></li>
+            <li><a href="newyork.html">Coleccion Oyster</a></li>
          <li><a href="#Cellini">Coleccion Cellini</a></li>
         </ul>
        </div>
    
       </div>
+       <!--footer--><div data-role="footer" data-position="fixed" data-id="oneFooter">
+            <span class="footerText">CopyrightJouwork @2014</span>
+        </div>
+
+    </div>     
      </div>
     </body>
 </html>
