--- a/Watches app/rollex.html
+++ b/Watches app/rollex.html
@@ -29,7 +29,7 @@
          <h1>Rolex</h1>
 
         <div>
-        <ul data-role="listview" data-theme="c">
+        <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
          <li><a href="relojesroll.html">Relojes</a></li>
          <li><a href="http://m.rolex.com/es">Official website</a></li>
          <li><a href="localizacionroll.html">Localizacion</a></li>
