--- a/Watches app/relojesroll.html
+++ b/Watches app/relojesroll.html
@@ -29,18 +29,18 @@
          <h1>Rolex</h1>
 
         <div>
-        <ul data-role="listview" data-theme="c">
-            <li><a href="newyork.html">Coleccion Oyster</a></li>
+        <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
+            <li><a href="oyster.html">Coleccion Oyster</a></li>
          <li><a href="#Cellini">Coleccion Cellini</a></li>
         </ul>
        </div>
    
       </div>
-       <!--footer--><div data-role="footer" data-position="fixed" data-id="oneFooter">
+       <!--footer-->
+            <div data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">CopyrightJouwork @2014</span>
         </div>
 
     </div>     
-     </div>
     </body>
 </html>
