finalizada por el moment

--- a/Watches app/relojesroll.html
+++ b/Watches app/relojesroll.html
@@ -31,7 +31,7 @@
         <div>
         <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
             <li><a href="oyster.html">Coleccion Oyster</a></li>
-         <li><a href="#Cellini">Coleccion Cellini</a></li>
+         <li><a href="cellini.html">Coleccion Cellini</a></li>
         </ul>
        </div>
    
