--- a/Watches app/lotus.html
+++ b/Watches app/lotus.html
@@ -2,26 +2,44 @@
 
 <html>
     <head>
-        <title>watchesapp/lotus</title>
+      <meta charset="UTF-8" />
+        <title>watchesapp/rolex</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="jquery-mobile/styles/jquery.mobile-1.3.1.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="david.css"/>
+
+    <script src="cordova.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/js/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+
+    <script src="scripts/login.js" type="text/javascript"></script>
+    <script src="scripts/location.js" type="text/javascript"></script>
     </head>
     <body>
-         <!--Lotus-->
-    <div id="page-lotus" data-role="page" data-add-back-btn="true">
+        <!--Lotus-->
+    <div id="page-rollex" data-role="page" data-add-back-btn="true">
 
         <!--Header-->
         <div data-role="header" data-position="fixed">
-            <h1>Lotus</h1>
+            <h1>Watches app</h1>
         </div>
-
         <!--Content-->
         <div data-role="content">
-        </div>
+         <h1>Lotus</h1>
 
+        <div>
+        <ul data-role="listview" data-theme="a" data-inset="true" class="listview">
+         <li><a href="relojes.html">Relojes</a></li>
+         <li><a href="http://www.lotus-watches.com/">Official website</a></li>
+        </ul>
+       </div>
+   
+      </div>
         <!--Footer-->
         <div data-role="footer" data-position="fixed" data-id="oneFooter">
             <span class="footerText">CopyrightJouwork @2014</span>
         </div>
-
-    </div>
+     </div>
     </body>
 </html>
