--- a/Watches app/oyster.html
+++ b/Watches app/oyster.html
@@ -122,8 +122,13 @@
              </ul>
              </div>
             <a href="#demo-links" data-rel="close" data-role="button" data-theme="c" data-icon="delete" data-inline="true">Close panel</a>
+               
             
          </div>
+        </div>
+            <!--Footer-->
+        <div data-role="footer" data-position="fixed" data-id="oneFooter">
+            <span class="footerText">CopyrightJouwork @2014</span>
         </div>
        </div>
     </body>
