--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -38,6 +38,9 @@
                 <li>
                     <a href="rollex.html" data-transition="slideup">Rolex</a>
                 </li>
+                <li>
+                    <a href="indexquiz.html" data-transition="slideup">Quiz</a>
+                </li>
             </ul>
         </div>
 
