--- a/Watches app/quiz.html
+++ b/Watches app/quiz.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+        <script>
+        jQuery('div').live('pagehide', function(event, ui){
+        var page = jQuery(event.target);
+        if(page.attr('data-cache') == 'never'){
+        page.remove();
+        };
+        });
+        </script>
     </head> 
     
     <body> 
