--- a/Watches app/index.html
+++ b/Watches app/index.html
@@ -14,6 +14,18 @@
 
     <script src="scripts/login.js" type="text/javascript"></script>
     <script src="scripts/location.js" type="text/javascript"></script>
+    <script type="text/javascript" charset="utf-8">  
+        function onLoad()
+        {
+            console.log("device reday !!!!")
+            document.addEventListener("deviceready", onDeviceReady, true);
+        }
+        function exitFromApp()
+        {
+            console.log("in button");
+            navigator.app.exitApp();
+        }
+    </script>
 </head>
 
 <body>
@@ -23,7 +35,7 @@
 
         <!--Header-->
         <div data-role="header" data-position="fixed">
-            <h1>Watches app</h1> 
+            <h1>Watches app</h1><input type="submit" onclick="exitFromApp()" value="exit" class="left"/>
            
         </div>
 
